# GITHUB_CODEBASE_AI_ASSISTENT

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Makefile  PHASE1_COMPLETE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_START_HERE.md  docker-compose.dev.yml  docker-compose.yml  docker-healthcheck.sh  docker-quickstart.sh  run_all_services.sh  run_dev_services.sh  setup.sh  setup_groq.sh  test_code_review.sh
backend/: .env.development  .env.example  .env.production  .gitignore  CHAT_SERVICE_IMPLEMENTATION.md  DATABASE_SETUP.md  Dockerfile  PHASE1_VERIFICATION.md  QUICK_START.md  README.md  TASK_1.4_SUMMARY.md  TASK_1.6_SUMMARY.md  TASK_2.15_SUMMARY.md  TASK_2.5_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  test_config.py  test_embedder_simple.py  test_jobs_manual.py  test_migration.py  test_phase1.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  15ecd27a584d_add_chat_session_tables.py
backend/app/: database.py  main.py
backend/app/api/: __init__.py
backend/app/core/: CONFIG_README.md  LOGGING_README.md  config.py  graceful_degradation.py  logging_config.py  redis_client.py
backend/app/jobs/: __init__.py  worker.py
backend/app/middleware/: __init__.py  error_handler.py  metrics_middleware.py  rate_limiter.py  request_logger.py
backend/app/services/: __init__.py  chat_service.py  chunking_service.py  groq_llm_service.py  ingestion_service.py  (+6 more)
backend/docs/: API_JOBS.md  BM25_SEARCH_IMPLEMENTATION.md  CIRCUIT_BREAKER.md  GRACEFUL_DEGRADATION.md  HYBRID_SEARCH.md  METRICS_README.md  METRICS_USAGE.md  TASK_3.15_SUMMARY.md  VECTOR_SEARCH.md  llm_service_implementation.md  multi_criteria_filtering.md  retry_usage_examples.md
backend/examples/: llm_service_example.py  multi_criteria_filtering_example.py  vector_search_example.py
backend/tests/: conftest.py
(+261 files in other folders)
